@@ -1,4 +1,6 @@
 DIST gnome-python-2.22.3.tar.bz2 588459 RMD160 81772db78abe864dcbf3c89b7f864dd3b8ba41d3 SHA1 35eafe4f5ab9ee003a573dcf26699d3b03d52d5a SHA256 a1763ef40aa0fc152e1afe6be6b01d69ba305273bd4bd44cad018da42d1bb559
+DIST gnome-python-2.26.1.tar.bz2 523132 RMD160 054901ecd209953225ccfa725fdd9164447fbb49 SHA1 789627d4107aa50cd7fc763c4de015032346524e SHA256 ede0203f1eec22b3ed4a91c7b769e437859e5bc4b89a8f8e80b3f7ca62317098
 EBUILD libgnome-python-2.22.3.ebuild 792 RMD160 f533b106eef651095b470aeef50b87854bfa397f SHA1 0b8a27c67e4a652d9e7bcfb495df83110dc82c00 SHA256 745deeb6893f3d546c4696fe72e3b28b54a00870b96e8e39e54e941f0caf5251
-MISC ChangeLog 1461 RMD160 5a369689c8fb67b3175577138163ccda124b358a SHA1 0630ff46ca636724b49fed878e681b55dd40be35 SHA256 0840d07ba3197b2fc6db89dbcde3bd5f84d1353acaac5d043c855368d76bab4d
+EBUILD libgnome-python-2.26.1.ebuild 795 RMD160 0059fc17d71789d56220864ff6b5453657f86f8a SHA1 a417361d5cc1d6ef5fa0e48aea4a9bf5799c8ce9 SHA256 6a0bc906f78423e4cb23084554efa52002b853a0b362a11f5fffce645057ceca
+MISC ChangeLog 1672 RMD160 d6f9018f227d77991644ffabb50fe3509d769b07 SHA1 59263bec919491ea2cd8aff7942689b442b7f9df SHA256 2e0b50905fe933589119f996ee7f40da1dd96dc5a065a128107d2633fb108e49
 MISC metadata.xml 178 RMD160 ec0937689a645defb2b870b481c4d4db57a0fa73 SHA1 aa77d904544ca6e6e684658ec652463fdb2ca58d SHA256 ccdf4a821074a281d4fd442460b65f57e77546cea36756c435db5529d22fa2a6
