@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/libgnome-python
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/libgnome-python/ChangeLog,v 1.9 2009/04/28 11:52:02 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/libgnome-python/ChangeLog,v 1.10 2009/05/10 21:49:20 eva Exp $
+
+*libgnome-python-2.26.1 (10 May 2009)
+
+  10 May 2009; Gilles Dartiguelongue <eva@gentoo.org>
+  -libgnome-python-2.22.1.ebuild, +libgnome-python-2.26.1.ebuild:
+  New version for GNOME 2.26. Clean up old revisions.
 
   28 Apr 2009; Raúl Porcel <armin76@gentoo.org>
   libgnome-python-2.22.3.ebuild:
